; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mc13783-core.c_mc13783_reg_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mc13783-core.c_mc13783_reg_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mc13783 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mc13783_reg_write(%struct.mc13783* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mc13783*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mc13783* %0, %struct.mc13783** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.mc13783*, %struct.mc13783** %4, align 8
  %9 = getelementptr inbounds %struct.mc13783, %struct.mc13783* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.mc13783*, %struct.mc13783** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @mc13783_write(%struct.mc13783* %11, i32 %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load %struct.mc13783*, %struct.mc13783** %4, align 8
  %16 = getelementptr inbounds %struct.mc13783, %struct.mc13783* %15, i32 0, i32 0
  %17 = call i32 @mutex_unlock(i32* %16)
  %18 = load i32, i32* %7, align 4
  ret i32 %18
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mc13783_write(%struct.mc13783*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
